<resources>
    <string name="app_name">FoodScanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="titleProductEmpty">Title</string>
    <string name="scan_button_text">SCAN</string>
    <string name="e_adds">E adds</string>
    <string name="mediumResult">Medium</string>
    <string name="incidents">Incidents</string>
    <string name="calories">Calories:</string>
    <string name="gram">Gram:</string>
    <string name="gramEmpty">300</string>
    <string name="ingredientsEmpty">ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients, ingredients</string>
    <string name="analyse_button">analyse button</string>
    <string name="history_button">history button</string>
    <string name="history">History</string>
    <string name="analysis">Analysis</string>
</resources>